...
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".activity.ListGithubUserActivity">

    <SearchView
        android:id="@+id/searchUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
...
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/searchUser"
        tools:listitem="@layout/rv_list_user" />

    <TextView
        android:id="@+id/statusSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/name_background"
...
