...
            android:textColor="@color/grey_soft"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:ems="8"
            app:layout_constraintStart_toEndOf="@+id/titleLocation"
            app:layout_constraintTop_toBottomOf="@+id/usernameDetail"
            tools:text="Lorem Ipsum" />

        <TextView
            android:id="@+id/companyDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
